# Groww-app-review-insights-analyser

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Procfile  README.md  pyproject.toml
.github/workflows/: weekly-pulse-scheduler.yml
scripts/: test_backend_api.py
src/phase1/: __init__.py  config.py  constants.py  phase1.py  text_utils.py
src/phase1/schemas/: __init__.py  enums.py  raw.py  review.py
src/phase2/: __init__.py  app_store.py  collect_run.py  columns.py  date_utils.py  google_play.py  ingestion.py  parsing.py  phase2.py  phase2_run.py
src/phase2/collectors/: __init__.py  app_store_rss.py  google_play_scrape.py  normalize_collected.py  target_collect.py
src/phase3/: __init__.py  emoji_filter.py  language_filter.py  phase3.py  pii_redaction.py  pipeline.py  text_cleanup.py
src/phase4/: __init__.py  groq_theme_run.py  jsonl_reviews.py  phase4.py  phase4_run.py  validation.py
src/phase5/: __init__.py  compose.py  phase5.py
src/phase6/: __init__.py  email_draft.py  fee_explanation.py  phase6.py  phase6_run.py
src/phase7/: __init__.py  api.py  google_doc_append.py  phase7.py  run_pipeline.py  server.py  weekly_run_cli.py  weekly_scheduler.py
src/review_pulse/: __init__.py  contracts.py
tests/: conftest.py  test_collectors_app_store.py  test_config.py  test_phase1_run.py  test_phase2_ingestion.py  test_phase3_emoji.py  test_phase3_language.py  test_phase3_sanitization.py  test_phase4_jsonl.py  test_phase4_validation.py  test_phase5_compose.py  test_phase6_email.py  test_phase7_google_doc_append.py  test_phase7_remote_collect.py  test_phase7_stale_run_timeout.py  test_phase7_week_bucket.py  test_review_schema.py  test_target_collect.py  test_text_utils.py
tests/fixtures/: app_store_sample.csv  google_play_sample.csv
webui/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
webui/lib/: isoWeek.ts
webui/pages/: _app.tsx  index.tsx
webui/styles/: globals.css
