[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-pulse"
version = "0.1.0"
description = "Weekly app review pulse pipeline (Phase 1 foundations)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "langdetect>=1.0.9",
  "emoji>=2.0",
  "python-dateutil>=2.8",
  "google-play-scraper>=1.2.7",
  "groq>=0.4",
  "google-generativeai>=0.8",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
review-pulse-phase1 = "phase1.phase1:main"
review-pulse-phase2-ingest = "phase2.phase2:main_ingest"
review-pulse-collect = "phase2.phase2:main_collect"
review-pulse-phase4-themes = "phase4.phase4:main"
review-pulse-phase5-note = "phase5.phase5:main"
review-pulse-phase6-draft = "phase6.phase6:main"
review-pulse-api = "phase7.phase7:main_api"
review-pulse-run-weekly = "phase7.phase7:main_run_weekly"
review-pulse-scheduler = "phase7.phase7:main_scheduler"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
